standalone/deploy/02-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rclone
  labels:
    app: rclone
    app.kubernetes.io/component: rclone
    app.kubernetes.io/instance: rclone
    app.kubernetes.io/part-of: rclone-app
    app.openshift.io/runtime-namespace: rclone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rclone
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rclone
    spec:
      volumes:
        - name: rclone-config
          persistentVolumeClaim:
            claimName: rclone-config
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: rclone
          ports:
            - containerPort: 5572
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: rclone-config
              mountPath: /opt/app-root/src/.rclone-config
          terminationMessagePolicy: File
          image: quay.io/guimou/rclone-web-openshift:standalone_latest
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
