standalone/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rclone
  labels:
    app: rclone
    app.kubernetes.io/component: rclone
    app.kubernetes.io/instance: rclone
    app.kubernetes.io/part-of: rclone-app
    app.openshift.io/runtime-version: v0.0.1
spec:
  ports:
    - name: 5572-tcp
      protocol: TCP
      port: 5572
      targetPort: 5572
  selector:
    app: rclone
    deploymentconfig: rclone
  sessionAffinity: None
